change size of device

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
 
     <ImageButton
         android:id="@+id/btn"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginStart="52dp"
         android:layout_marginLeft="52dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="44dp"
         android:background="@color/colorstr"
+        android:onClick="changeToEmergency"
         android:padding="1dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,29 +24,32 @@
 
     <ImageButton
         android:id="@+id/btnFindDoctor6"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/colorstr"
+        android:onClick="changeToMedicalShop"
         android:padding="1dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toEndOf="@+id/btn"
         app:layout_constraintTop_toBottomOf="@+id/btnFindDoctor4"
         app:srcCompat="@drawable/medicalshopicon" />
 
     <ImageButton
         android:id="@+id/btn3"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginStart="52dp"
         android:layout_marginLeft="52dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="44dp"
         android:background="@color/colorstr"
+        android:onClick="changeToHistorical"
         android:padding="1dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,22 +58,25 @@
 
     <ImageButton
         android:id="@+id/btnFindDoctor4"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:background="@color/colorstr"
+        android:onClick="changeToAppointment"
         android:padding="1dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toEndOf="@+id/btn3"
         app:layout_constraintTop_toBottomOf="@+id/btnHospital"
         app:srcCompat="@drawable/appointmenticon" />
 
     <android.support.design.widget.BottomNavigationView
-        android:layout_width="465dp"
-        android:layout_height="94dp"
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="396dp"
+        android:layout_height="69dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -88,12 +95,13 @@
 
     <ImageButton
         android:id="@+id/btnFindDoctor"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginStart="52dp"
         android:layout_marginLeft="52dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
         android:background="@color/colorstr"
+        android:onClick="changeToFindDoctors"
         android:padding="1dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,20 +110,22 @@
 
     <ImageButton
         android:id="@+id/btnHospital"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="116dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/colorstr"
+        android:onClick="changeToHospitals"
         android:padding="1dp"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="@+id/btnFindDoctor"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toEndOf="@+id/btnFindDoctor"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.958"
         app:srcCompat="@drawable/hospitalicon" />
 </android.support.constraint.ConstraintLayout>
