--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:visibility="visible">
 
@@ -11,12 +11,13 @@
         android:id="@+id/btn"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginTop="44dp"
-        android:background="@color/colorstr"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/button_styles"
+        android:contentDescription="@string/btn_toEmergency"
         android:onClick="changeToEmergency"
-        android:padding="1dp"
+        android:padding="10dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn3"
@@ -26,18 +27,15 @@
         android:id="@+id/btnFindDoctor6"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@color/colorstr"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/button_styles"
+        android:contentDescription="@string/btn_toMedicalshop"
         android:onClick="changeToMedicalShop"
-        android:padding="1dp"
+        android:padding="10dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/btn"
         app:layout_constraintTop_toBottomOf="@+id/btnFindDoctor4"
         app:srcCompat="@drawable/medicalshopicon" />
 
@@ -45,12 +43,13 @@
         android:id="@+id/btn3"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="44dp"
-        android:background="@color/colorstr"
+        android:background="@drawable/button_styles"
+        android:contentDescription="@string/btn_toaAppointments"
         android:onClick="changeToHistorical"
-        android:padding="1dp"
+        android:padding="10dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnFindDoctor"
@@ -60,49 +59,39 @@
         android:id="@+id/btnFindDoctor4"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/colorstr"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/button_styles"
+        android:contentDescription="@string/btn_toHistorical"
         android:onClick="changeToAppointment"
-        android:padding="1dp"
+        android:padding="10dp"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/btn3"
         app:layout_constraintTop_toBottomOf="@+id/btnHospital"
         app:srcCompat="@drawable/appointmenticon" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="396dp"
-        android:layout_height="69dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:itemIconSize="40dp"
         app:itemIconTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn"
-        app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_navigation" />
 
     <ImageButton
         android:id="@+id/btnFindDoctor"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
-        android:background="@color/colorstr"
+        android:background="@drawable/button_styles"
+        android:contentDescription="@string/btn_toDoctor"
         android:onClick="changeToFindDoctors"
-        android:padding="1dp"
+        android:padding="10dp"
         android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -112,20 +101,15 @@
         android:id="@+id/btnHospital"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@color/colorstr"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/button_styles"
+        android:contentDescription="@string/btn_toHospital"
         android:onClick="changeToHospitals"
-        android:padding="1dp"
+        android:padding="10dp"
         android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="@+id/btnFindDoctor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/btnFindDoctor"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.958"
         app:srcCompat="@drawable/hospitalicon" />
 </android.support.constraint.ConstraintLayout>
