--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:src="@drawable/logo"
+                android:src="@drawable/logof"
                 android:layout_width="60dp"
                 android:layout_height="60dp" />
 
@@ -99,11 +99,12 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:textColor="#fff"
-                    android:text="\t\t\tVaccineApp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="70dp"
+                    android:text="VaccineApp"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textColor="#fff" />
 
 
             </LinearLayout>
