--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#716A6C</color>
+    <color name="colorAccent">#7963AC</color>
     <color name="colorstr">#19739F</color>
     <color name="colorend">#FF4DBE</color>
 </resources>
