SignUp activity and ForgotPassword activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#7963AC</color>
     <color name="colorstr">#19739F</color>
-    <color name="colorend">#FF4DBE</color>
+    <color name="colorend">#9A1B6B</color>
 </resources>
